[gd_scene load_steps=24 format=3 uid="uid://bbjstf85fr5rt"]

[ext_resource type="Script" uid="uid://2k12yh3rkeqr" path="res://control.gd" id="1_0xm2m"]
[ext_resource type="Texture2D" uid="uid://cnqu3nmrda8px" path="res://Untitled 10-04-2025 10-49-21.png" id="1_4c57u"]
[ext_resource type="Texture2D" uid="uid://brliq7mnt6s61" path="res://a-tall-glass-filled-with-water-sits-on-a-transparent-background-png.png" id="2_5vw27"]
[ext_resource type="Texture2D" uid="uid://dicniwkl0n2co" path="res://icon.svg" id="2_h2yge"]
[ext_resource type="Texture2D" uid="uid://drgw1yfld87if" path="res://Untitled 09-11-2025 09-29-12.png" id="3_1bvp3"]
[ext_resource type="Texture2D" uid="uid://gm0qdc86ey8i" path="res://orange-with-ai-generated-free-png.png" id="3_kek77"]
[ext_resource type="FontFile" uid="uid://f71bj77sai0j" path="res://brackeys_platformer_assets/brackeys_platformer_assets/fonts/PixelOperator8.ttf" id="4_1bvp3"]
[ext_resource type="Texture2D" uid="uid://b31gocgwrcbeq" path="res://pngtree-green-lemon-png-image_15759038.png" id="4_4c57u"]
[ext_resource type="Texture2D" uid="uid://gpmvdij0o52t" path="res://pngtree-white-sugar-png-image_12837048.png" id="5_kek77"]
[ext_resource type="Texture2D" uid="uid://jrn3i80juoa6" path="res://Untitled 09-15-2025 11-02-53.png" id="5_lquwl"]
[ext_resource type="AudioStream" uid="uid://c6n2oyh2uyyg" path="res://brackeys_platformer_assets/brackeys_platformer_assets/music/time_for_adventure.mp3" id="11_efxa6"]
[ext_resource type="Script" uid="uid://1hk5timw24ih" path="res://configuraciones.gd" id="12_dg77c"]

[sub_resource type="Animation" id="Animation_4c57u"]
resource_name = "Quieto"
length = 1.09
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D3:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 0.7, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 1]
}

[sub_resource type="Animation" id="Animation_efxa6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D3:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Label:theme_override_colors/font_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Label:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(792, 558)]
}

[sub_resource type="Animation" id="Animation_dg77c"]
resource_name = "Agregar"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D3:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}

[sub_resource type="Animation" id="Animation_ycdy4"]
resource_name = "Explosion"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D3:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [4, 5, 4]
}

[sub_resource type="Animation" id="Animation_w48qg"]
resource_name = "Mezclar"
length = 2.0

[sub_resource type="Animation" id="Animation_vivmo"]
resource_name = "Nueva receta"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:theme_override_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Label:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(792, 558), Vector2(792, 435), Vector2(792, 435), Vector2(792, 558)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ycdy4"]
_data = {
&"Agregar": SubResource("Animation_dg77c"),
&"Explosion": SubResource("Animation_ycdy4"),
&"Mezclar": SubResource("Animation_w48qg"),
&"Nueva receta": SubResource("Animation_vivmo"),
&"Quieto": SubResource("Animation_4c57u"),
&"RESET": SubResource("Animation_efxa6")
}

[sub_resource type="Animation" id="Animation_2cqfq"]
resource_name = "Mezclar"
length = 2.0

[sub_resource type="Animation" id="Animation_yaehf"]
resource_name = "Nueva Receta"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:theme_override_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Label:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(792, 558), Vector2(792, 442.5), Vector2(792, 442.5), Vector2(792, 558)]
}

[sub_resource type="Animation" id="Animation_074og"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:theme_override_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Label:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(792, 558)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cegan"]
_data = {
&"Mezclar": SubResource("Animation_2cqfq"),
&"Nueva Receta": SubResource("Animation_yaehf"),
&"RESET": SubResource("Animation_074og")
}

[node name="Main" type="Node2D"]

[node name="Sprite2D3" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(612, 316)
texture = ExtResource("1_4c57u")
hframes = 4
vframes = 3

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0xm2m")

[node name="Boton_A" type="Button" parent="Control"]
clip_contents = true
layout_mode = 0
offset_left = 830.0
offset_top = 39.0
offset_right = 966.0
offset_bottom = 175.0
scale = Vector2(0.21, 0.21)
icon = ExtResource("2_5vw27")
flat = true

[node name="Boton_B" type="Button" parent="Control"]
clip_contents = true
layout_mode = 0
offset_left = 980.0
offset_top = 39.0
offset_right = 1116.0
offset_bottom = 175.0
scale = Vector2(0.21, 0.21)
icon = ExtResource("3_kek77")
flat = true

[node name="Boton_C" type="Button" parent="Control"]
clip_contents = true
layout_mode = 0
offset_left = 830.0
offset_top = 187.0
offset_right = 966.0
offset_bottom = 323.0
scale = Vector2(0.23, 0.23)
icon = ExtResource("4_4c57u")
flat = true

[node name="Boton_D" type="Button" parent="Control"]
clip_contents = true
layout_mode = 0
offset_left = 980.0
offset_top = 187.0
offset_right = 1348.0
offset_bottom = 555.0
scale = Vector2(0.22, 0.22)
icon = ExtResource("5_kek77")
flat = true

[node name="Boton_E" type="Button" parent="Control"]
layout_mode = 0
offset_left = 95.0
offset_top = 40.0
offset_right = 231.0
offset_bottom = 176.0
scale = Vector2(0.65, 0.65)
icon = ExtResource("2_h2yge")

[node name="Boton_F" type="Button" parent="Control"]
layout_mode = 0
offset_left = 245.00006
offset_top = 40.00003
offset_right = 381.00006
offset_bottom = 176.00003
scale = Vector2(0.678275, 0.657849)
icon = ExtResource("2_h2yge")

[node name="Boton_G" type="Button" parent="Control"]
layout_mode = 0
offset_left = 95.0
offset_top = 200.0
offset_right = 231.0
offset_bottom = 336.0
scale = Vector2(0.65, 0.65)
icon = ExtResource("2_h2yge")

[node name="Boton_H" type="Button" parent="Control"]
layout_mode = 0
offset_left = 245.0
offset_top = 200.0
offset_right = 381.0
offset_bottom = 336.0
scale = Vector2(0.65, 0.65)
icon = ExtResource("2_h2yge")

[node name="Panel_A" type="Control" parent="Control"]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Sprite1" type="Sprite2D" parent="Control/Panel_A"]
texture_filter = 1
position = Vector2(254.25, 310)
scale = Vector2(8, 8)
texture = ExtResource("3_1bvp3")

[node name="Label" type="Label" parent="Control/Panel_A"]
layout_mode = 0
offset_left = 221.0
offset_top = 71.0
offset_right = 277.0
offset_bottom = 94.0
theme_override_fonts/font = ExtResource("4_1bvp3")
text = "Agua"
metadata/_edit_use_anchors_ = true

[node name="Label2" type="Label" parent="Control/Panel_A"]
layout_mode = 0
offset_left = 100.0
offset_top = 146.0
offset_right = 406.0
offset_bottom = 181.0
theme_override_fonts/font = ExtResource("4_1bvp3")
text = "el agua es agua nada m√°s
que decir"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Agregar_A" type="Button" parent="Control/Panel_A"]
layout_mode = 0
offset_left = 129.0
offset_top = 508.0
offset_right = 265.0
offset_bottom = 644.0
scale = Vector2(1.75826, 0.230882)
icon = ExtResource("2_h2yge")
metadata/_edit_use_anchors_ = true

[node name="Panel_B" type="Control" parent="Control"]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Sprite2" type="Sprite2D" parent="Control/Panel_B"]
texture_filter = 1
position = Vector2(254.25, 310)
scale = Vector2(8, 8)
texture = ExtResource("3_1bvp3")

[node name="Label" type="Label" parent="Control/Panel_B"]
layout_mode = 0
offset_left = 200.0
offset_top = 68.0
offset_right = 298.0
offset_bottom = 91.0
theme_override_fonts/font = ExtResource("4_1bvp3")
text = "Naranja"

[node name="Label2" type="Label" parent="Control/Panel_B"]
layout_mode = 0
offset_left = 131.0
offset_top = 116.0
offset_right = 381.0
offset_bottom = 139.0
theme_override_fonts/font = ExtResource("4_1bvp3")
text = "potasio o vitamina c"

[node name="Agregar_B" type="Button" parent="Control/Panel_B"]
layout_mode = 0
offset_left = 129.0
offset_top = 508.0
offset_right = 265.0
offset_bottom = 644.0
scale = Vector2(1.75826, 0.230882)
icon = ExtResource("2_h2yge")

[node name="Panel_C" type="Control" parent="Control"]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Sprite3" type="Sprite2D" parent="Control/Panel_C"]
texture_filter = 1
position = Vector2(254.25, 310)
scale = Vector2(8, 8)
texture = ExtResource("3_1bvp3")

[node name="Agregar_C" type="Button" parent="Control/Panel_C"]
layout_mode = 0
offset_left = 129.0
offset_top = 508.0
offset_right = 265.0
offset_bottom = 644.0
scale = Vector2(1.75826, 0.230882)
icon = ExtResource("2_h2yge")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="Control/Panel_C"]
texture_filter = 1
layout_mode = 0
offset_left = 205.0
offset_top = 79.0
offset_right = 275.0
offset_bottom = 102.0
theme_override_fonts/font = ExtResource("4_1bvp3")
text = "Limon"
metadata/_edit_use_anchors_ = true

[node name="Label2" type="Label" parent="Control/Panel_C"]
texture_filter = 1
layout_mode = 0
offset_left = 91.0
offset_top = 125.0
offset_right = 417.0
offset_bottom = 179.0
theme_override_fonts/font = ExtResource("4_1bvp3")
text = "Ni tan √°cido como te
hacen creer los
 gringos"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Panel_D" type="Control" parent="Control"]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Sprite4" type="Sprite2D" parent="Control/Panel_D"]
texture_filter = 1
position = Vector2(254.25, 310)
scale = Vector2(8, 8)
texture = ExtResource("3_1bvp3")

[node name="Agregar_D" type="Button" parent="Control/Panel_D"]
layout_mode = 0
offset_left = 129.0
offset_top = 508.0
offset_right = 265.0
offset_bottom = 644.0
scale = Vector2(1.75826, 0.230882)
icon = ExtResource("2_h2yge")

[node name="Panel_E" type="Control" parent="Control"]
visible = false
anchors_preset = 0
offset_left = 701.0
offset_top = 9.0
offset_right = 741.0
offset_bottom = 49.0

[node name="Sprite4" type="Sprite2D" parent="Control/Panel_E"]
texture_filter = 1
position = Vector2(254.25, 310)
scale = Vector2(8, 8)
texture = ExtResource("3_1bvp3")

[node name="Agregar_E" type="Button" parent="Control/Panel_E"]
layout_mode = 0
offset_left = 129.0
offset_top = 508.0
offset_right = 265.0
offset_bottom = 644.0
scale = Vector2(1.75826, 0.230882)
icon = ExtResource("2_h2yge")

[node name="Panel_F" type="Control" parent="Control"]
visible = false
anchors_preset = 0
offset_left = 701.0
offset_top = 9.0
offset_right = 741.0
offset_bottom = 49.0

[node name="Sprite4" type="Sprite2D" parent="Control/Panel_F"]
texture_filter = 1
position = Vector2(254.25, 310)
scale = Vector2(8, 8)
texture = ExtResource("3_1bvp3")

[node name="Agregar_F" type="Button" parent="Control/Panel_F"]
layout_mode = 0
offset_left = 129.0
offset_top = 508.0
offset_right = 265.0
offset_bottom = 644.0
scale = Vector2(1.75826, 0.230882)
icon = ExtResource("2_h2yge")

[node name="Panel_G" type="Control" parent="Control"]
visible = false
anchors_preset = 0
offset_left = 701.0
offset_top = 9.0
offset_right = 741.0
offset_bottom = 49.0

[node name="Sprite4" type="Sprite2D" parent="Control/Panel_G"]
texture_filter = 1
position = Vector2(254.25, 310)
scale = Vector2(8, 8)
texture = ExtResource("3_1bvp3")

[node name="Agregar_G" type="Button" parent="Control/Panel_G"]
layout_mode = 0
offset_left = 129.0
offset_top = 508.0
offset_right = 265.0
offset_bottom = 644.0
scale = Vector2(1.75826, 0.230882)
icon = ExtResource("2_h2yge")

[node name="Panel_H" type="Control" parent="Control"]
visible = false
anchors_preset = 0
offset_left = 701.0
offset_top = 9.0
offset_right = 741.0
offset_bottom = 49.0

[node name="Sprite4" type="Sprite2D" parent="Control/Panel_H"]
texture_filter = 1
position = Vector2(254.25, 310)
scale = Vector2(8, 8)
texture = ExtResource("3_1bvp3")

[node name="Agregar_H" type="Button" parent="Control/Panel_H"]
layout_mode = 0
offset_left = 129.0
offset_top = 508.0
offset_right = 265.0
offset_bottom = 644.0
scale = Vector2(1.75826, 0.230882)
icon = ExtResource("2_h2yge")

[node name="Mezclar" type="Button" parent="Control"]
layout_mode = 0
offset_left = 467.0
offset_top = 536.0
offset_right = 603.0
offset_bottom = 672.0
scale = Vector2(1.98766, 0.398365)
icon = ExtResource("2_h2yge")

[node name="Reset" type="Button" parent="Control"]
layout_mode = 0
offset_left = 481.0
offset_top = 50.0
offset_right = 617.0
offset_bottom = 186.0
scale = Vector2(1.96861, 0.569466)
icon = ExtResource("2_h2yge")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 572.0
offset_top = 384.0
offset_right = 582.0
offset_bottom = 394.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(8, 4)
size_flags_horizontal = 0
color = Color(1, 1, 1, 0)

[node name="ColorRect2" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 572.5
offset_top = 403.5
offset_right = 582.5
offset_bottom = 413.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(8, 2)
color = Color(1, 1, 1, 0)

[node name="ColorRect3" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 571.5
offset_top = 383.5
offset_right = 581.5
offset_bottom = 393.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(8, 2)
color = Color(1, 1, 1, 0)

[node name="Configuraciones" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("12_dg77c")

[node name="VBoxContainer" type="VBoxContainer" parent="Configuraciones"]
layout_mode = 0
offset_left = 1001.0
offset_top = 345.0
offset_right = 1137.0
offset_bottom = 627.0
theme_override_constants/separation = 10

[node name="Configuranci√≥n" type="Button" parent="Configuraciones/VBoxContainer"]
layout_mode = 2
icon = ExtResource("2_h2yge")
flat = true

[node name="Salir" type="Button" parent="Configuraciones/VBoxContainer"]
layout_mode = 2
icon = ExtResource("2_h2yge")
flat = true

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(614.5, 366.5)
scale = Vector2(5, 5)
texture = ExtResource("5_lquwl")
hframes = 5
vframes = 3

[node name="Sprite2D2" type="Sprite2D" parent="."]
position = Vector2(613.5, 408.5)
scale = Vector2(0.15, 0.15)
texture = ExtResource("5_kek77")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_efxa6")
autoplay = true
parameters/looping = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_ycdy4")
}

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_cegan")
}

[node name="Label" type="Label" parent="."]
texture_filter = 1
offset_left = 792.0
offset_top = 558.0
offset_right = 1144.0
offset_bottom = 580.9999
theme_override_colors/font_color = Color(1, 1, 1, 0)
theme_override_fonts/font = ExtResource("4_1bvp3")
text = "Aprendiste una nueva receta"

[connection signal="pressed" from="Control/Boton_A" to="Control" method="_on_boton_a_pressed"]
[connection signal="pressed" from="Control/Boton_B" to="Control" method="_on_boton_b_pressed"]
[connection signal="pressed" from="Control/Boton_C" to="Control" method="_on_boton_c_pressed"]
[connection signal="pressed" from="Control/Boton_D" to="Control" method="_on_boton_d_pressed"]
[connection signal="pressed" from="Control/Boton_E" to="Control" method="_on_boton_e_pressed"]
[connection signal="pressed" from="Control/Boton_F" to="Control" method="_on_boton_f_pressed"]
[connection signal="pressed" from="Control/Boton_G" to="Control" method="_on_boton_g_pressed"]
[connection signal="pressed" from="Control/Boton_H" to="Control" method="_on_boton_h_pressed"]
[connection signal="pressed" from="Control/Panel_A/Agregar_A" to="Control" method="_on_agregar_a_pressed"]
[connection signal="pressed" from="Control/Panel_B/Agregar_B" to="Control" method="_on_agregar_b_pressed"]
[connection signal="pressed" from="Control/Panel_C/Agregar_C" to="Control" method="_on_agregar_c_pressed"]
[connection signal="pressed" from="Control/Panel_D/Agregar_D" to="Control" method="_on_agregar_d_pressed"]
[connection signal="pressed" from="Control/Panel_E/Agregar_E" to="Control" method="_on_agregar_e_pressed"]
[connection signal="pressed" from="Control/Panel_F/Agregar_F" to="Control" method="_on_agregar_f_pressed"]
[connection signal="pressed" from="Control/Panel_G/Agregar_G" to="Control" method="_on_agregar_g_pressed"]
[connection signal="pressed" from="Control/Panel_H/Agregar_H" to="Control" method="_on_agregar_h_pressed"]
[connection signal="pressed" from="Control/Mezclar" to="Control" method="_on_mezclar_pressed"]
[connection signal="pressed" from="Control/Reset" to="Control" method="_on_reset_pressed"]
[connection signal="pressed" from="Configuraciones/VBoxContainer/Configuranci√≥n" to="Configuraciones" method="_on_configuranci√≥n_pressed"]
[connection signal="pressed" from="Configuraciones/VBoxContainer/Salir" to="Configuraciones" method="_on_salir_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="Control" method="_on_animation_player_animation_finished"]
[connection signal="animation_finished" from="AnimationPlayer2" to="Control" method="_on_animation_player_2_animation_finished"]
